--- a/SafeDevelopLesson-6-1/SafeDevelopLesson-6-1/SafeDevelopLesson-6-1.csproj
+++ b/SafeDevelopLesson-6-1/SafeDevelopLesson-6-1/SafeDevelopLesson-6-1.csproj
@@ -9,7 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
+    <PackageReference Include="NEST" Version="7.17.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Elastic\" />
   </ItemGroup>
 
 </Project>
